--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3 Morris Man</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nine Men's Morris</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="game-container">
-    <div class="board">
-      <div class="cell" data-index="0"></div>
-      <div class="cell" data-index="1"></div>
-      <div class="cell" data-index="2"></div>
-      <div class="cell" data-index="3"></div>
-      <div class="cell" data-index="4"></div>
-      <div class="cell" data-index="5"></div>
-      <div class="cell" data-index="6"></div>
-      <div class="cell" data-index="7"></div>
-      <div class="cell" data-index="8"></div>
+    <h1>Nine Men's Morris</h1>
+    <div id="turnText">Turno: Negras</div>
+    <div id="board">
+        <!-- Crear un tablero de 3x3 -->
+        <div class="row">
+            <div class="cell" id="1-1"></div>
+            <div class="cell" id="1-2"></div>
+            <div class="cell" id="1-3"></div>
+        </div>
+        <div class="row">
+            <div class="cell" id="2-1"></div>
+            <div class="cell" id="2-2"></div>
+            <div class="cell" id="2-3"></div>
+        </div>
+        <div class="row">
+            <div class="cell" id="3-1"></div>
+            <div class="cell" id="3-2"></div>
+            <div class="cell" id="3-3"></div>
+        </div>
     </div>
-    <div class="info">
-      <p id="turn-info">Turno: Rojo</p>
-      <button id="reset-btn">Reiniciar Juego</button>
-    </div>
-  </div>
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
