rename game to Three Men's Morris and update turn logic in script.js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
 </head>
 <body>
-    <h1>Nine Men's Morris</h1>
+    <h1>Three Men's Morris</h1>
     <div id="turnText">Turno: Negras</div>
     <div id="board">
         <!-- Crear un tablero de 3x3 -->
